...
        android:id="@+id/registrationThreeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewPagerContainer"
        android:text="Select your Fitness Goal"
        android:fontFamily="@font/poppins_extrabold"
        />

    <ImageView
        android:id="@+id/registrationThreeLeftArrow"
...
        android:id="@+id/registrationThreePersonaDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registrationThreePersona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registrationThreeCompleteRegistration"
        android:text="/"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/poppins_semibold"
        />

    <Button
...
